refactored geo.sections database creation

--- a/notebooks/reports/201801-GabrielBogo-Traffic_Probabilities.ipynb
+++ b/notebooks/reports/201801-GabrielBogo-Traffic_Probabilities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -23,12 +23,14 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import geopandas as gpd\n",
+    "import json\n",
     "from sqlalchemy import MetaData, create_engine, extract, select\n",
     "from sqlalchemy.engine.url import URL\n",
     "from sqlalchemy.sql import or_\n",
     "import datetime\n",
     "from pytz import timezone\n",
     "from shapely.geometry import Point\n",
+    "from geojson import Feature\n",
     "\n",
     "import glob\n",
     "\n",
@@ -928,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1315,7 @@
        "11754  POLYGON ((-48.82074156513088 -26.2238116116251...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1364,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -1384,13 +1386,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Save as CSV\n",
+    "\n",
+    "def add_geojson(df):\n",
+    "    df[\"geojson\"] = df.apply(lambda row: json.dumps(Feature(geometry=row.section_LineString)), axis=1)\n",
+    "    return df\n",
+    "\n",
+    "geo_traffic_indicators = geo_traffic_indicators.pipe(add_geojson)\n",
+    "\n",
     "file_name = \"traffic_indicators_\" + \\\n",
     "                       str(start_point.year) + \\\n",
     "                       \"_\" + \\\n",
