--- a/notebooks/reports/201803-GabrielBogo-Optimization_CensusSectorsAllocation.ipynb
+++ b/notebooks/reports/201803-GabrielBogo-Optimization_CensusSectorsAllocation.ipynb
@@ -822,7 +822,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Matrix created in 21 seconds.\n"
+      "Matrix created in 11 seconds.\n"
      ]
     },
     {
@@ -1122,7 +1122,7 @@
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"300\" height=\"300\" viewBox=\"717059.6435679999 7092682.582568 561.3625640000682 599.4332640003413\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,14185964.5984)\"><path fill-rule=\"evenodd\" fill=\"#ff3333\" stroke=\"#555555\" stroke-width=\"3.996221760002275\" opacity=\"0.6\" d=\"M 717233.8242,7093167.3363 L 717273.1948,7093226.0727 L 717297.0367,7093259.8146 L 717396.8742,7093219.8931 L 717464.5617,7093191.2745 L 717498.8403,7093173.9603 L 717533.8722,7093141.5619 L 717568.1997,7093110.0629 L 717598.8049,7093081.8383 L 717558.3772,7093013.8044 L 717509.1958,7092917.221 L 717454.5641,7092864.3877 L 717401.7547,7092815.0745 L 717354.6245,7092769.7552 L 717283.8904,7092704.7838 L 717233.3385,7092753.2921 L 717227.144,7092759.2713 L 717161.4762,7092822.3269 L 717081.8448,7092906.4534 L 717097.57,7092938.8857 L 717161.2904,7093055.2848 L 717194.7674,7093103.707 L 717233.8242,7093167.3363 L 717318.9423,7092994.83 L 717355.0948,7093037.8826 L 717299.7863,7093084.6565 L 717237.3385,7092999.4767 L 717284.9228,7092961.5651 L 717318.9423,7092994.83 L 717233.8242,7093167.3363 z\" /></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x7ff124d3de80>"
+       "<shapely.geometry.polygon.Polygon at 0x7fc21d788e48>"
       ]
      },
      "execution_count": 8,
@@ -1145,7 +1145,7 @@
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"127.60361199988984\" height=\"132.93871199898422\" viewBox=\"717232.414844 7092956.641444 127.60361199988984 132.93871199898422\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,14186046.2216)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"2.0\" opacity=\"0.6\" d=\"M 717299.7863,7093084.6565 L 717355.0948,7093037.8826 L 717318.9423,7092994.83 L 717284.9228,7092961.5651 L 717237.3385,7092999.4767 L 717299.7863,7093084.6565 z\" /></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x7ff125104da0>"
+       "<shapely.geometry.polygon.Polygon at 0x7fc21d79bd68>"
       ]
      },
      "execution_count": 9,
@@ -1168,7 +1168,7 @@
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"300\" height=\"300\" viewBox=\"718959.123944 7082238.698543999 832.8048120000167 1493.9304120009765\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,14165971.3275)\"><path fill-rule=\"evenodd\" fill=\"#ff3333\" stroke=\"#555555\" stroke-width=\"9.95953608000651\" opacity=\"0.6\" d=\"M 719318.93,7083677.2982 L 719623.9804,7083420.4036 L 719648.4531,7083396.8245 L 719671.0399,7083368.0608 L 719693.3467,7083325.0078 L 719715.296,7083258.9091 L 719731.3384,7083162.6576 L 719736.598,7083055.9469 L 719726.3583,7082976.2134 L 719694.7717,7082888.3159 L 719658.6651,7082883.057 L 719640.7867,7082871.7215 L 719623.0371,7082848.9726 L 719601.7679,7082820.0794 L 719576.8826,7082789.9112 L 719535.4167,7082759.1381 L 719498.1119,7082732.0743 L 719440.896,7082696.6919 L 719334.4218,7082624.5837 L 719306.546,7082581.2794 L 719264.3208,7082499.5373 L 719226.1955,7082447.4401 L 719184.0882,7082421.1057 L 719148.1154,7082397.1481 L 719106.789,7082367.1219 L 719086.1778,7082340.8701 L 719032.4601,7082294.0293 L 719051.4513,7082629.8423 L 719062.9834,7082766.7494 L 719063.634,7082817.6697 L 719072.5978,7082902.9111 L 719014.4547,7083605.2368 L 719188.8918,7083646.7057 L 719318.93,7083677.2982 L 719465.0124,7082903.94 L 719537.5753,7082953.6492 L 719492.1272,7083035.6747 L 719416.6819,7082982.3559 L 719343.945,7082930.9504 L 719389.4489,7082852.1745 L 719465.0124,7082903.94 L 719318.93,7083677.2982 z\" /></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x7ff1250f9978>"
+       "<shapely.geometry.polygon.Polygon at 0x7fc21d790940>"
       ]
      },
      "execution_count": 10,
@@ -1191,7 +1191,7 @@
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"131.43217600008938\" height=\"142.2734759990126\" viewBox=\"719411.412512 7082898.670612001 131.43217600008938 142.2734759990126\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,14165939.6147)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"2.0\" opacity=\"0.6\" d=\"M 719416.6819,7082982.3559 L 719492.1272,7083035.6747 L 719537.5753,7082953.6492 L 719465.0124,7082903.94 L 719416.6819,7082982.3559 z\" /></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x7ff1250f9278>"
+       "<shapely.geometry.polygon.Polygon at 0x7fc21d790240>"
       ]
      },
      "execution_count": 11,
@@ -1214,7 +1214,7 @@
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"131.48191200010478\" height=\"140.59591199923307\" viewBox=\"719338.7377439999 7082846.967244 131.48191200010478 140.59591199923307\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,14165834.5304)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"2.0\" opacity=\"0.6\" d=\"M 719416.6819,7082982.3559 L 719465.0124,7082903.94 L 719389.4489,7082852.1745 L 719343.945,7082930.9504 L 719416.6819,7082982.3559 z\" /></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x7ff1251014e0>"
+       "<shapely.geometry.polygon.Polygon at 0x7fc21d7984a8>"
       ]
      },
      "execution_count": 12,
@@ -1236,7 +1236,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "start = time.time()\n",
