extract_geo_jams function readapted to louisville framework

--- a/notebooks/reports/201801-GabrielBogo-Traffic_Probabilities.ipynb
+++ b/notebooks/reports/201801-GabrielBogo-Traffic_Probabilities.ipynb
@@ -44,6 +44,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What the block below does is:\n",
+    "1. Connect to the \"jams\" table of the database. See database documentation for more information;\n",
+    "2. Retrieve 3 months of jams data as a Pandas dataframe;\n",
+    "\n",
+    "SELECT JAMS\n",
+    "SELECT DATAFILES"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -82,6 +94,13 @@
     "#                       \"_\" + \\\n",
     "#                       \"week\" + str(i+1) + \".csv\"\n",
     "#                      )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DELETE THE BLOCK BELOW"
    ]
   },
   {
@@ -309,6 +328,24 @@
     "df_jps = pd.concat(list_)\n",
     "display(df_jps.shape)\n",
     "display(df_jps.sample(5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cross-reference jams data with georeferenced sections from geo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#LOAD SECTIONS SHAPEFILE OR WKT, CROSS WITH JAMS"
    ]
   },
   {
@@ -929,6 +966,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DELETE CODE BELOW. THIS HAS BEEN DONE ABOVE."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -1366,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -1381,15 +1425,8 @@
     "                       str(start_point.day) + \\\n",
     "                       \"_\" + str(num_weeks) + \"_weeks.geoJSON\"\n",
     "                        \n",
-    "#geo_traffic_indicators.to_file(project_dir + \"/data/interim/\" + file_name, driver=\"GeoJSON\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#geo_traffic_indicators.to_file(project_dir + \"/data/interim/\" + file_name, driver=\"GeoJSON\")\n",
+    "\n",
     "#Save as CSV\n",
     "\n",
     "def add_geojson(df):\n",
@@ -1407,6 +1444,15 @@
     "                       \"_\" + str(num_weeks) + \"_weeks.csv\"\n",
     "                        \n",
     "geo_traffic_indicators.to_csv(project_dir + \"/data/interim/\" + file_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Etapa 1 - Rankeamento de Vias\n",
+    "\n",
+    "### Cálculos realizados com dados referentes ao período de 01/20/2017 a 21/10/2018, das 07:00 às 09:00 e das 17:00 às 19:00."
    ]
   }
  ],
