--- a/notebooks/reports/201802-GabrielBogo-RankeamentoVias.ipynb
+++ b/notebooks/reports/201802-GabrielBogo-RankeamentoVias.ipynb
@@ -1598,7 +1598,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "gdf_acc[gdf_acc[\"ClassFunc\"] == \"LOCAL/OUTRO\"][col_list] \\\n",
